objects/BCTempReading__x.object
<CustomObject>
    <description>BCTempReading</description>
    <externalDataSource>BCTempReading</externalDataSource>
    <externalName>BCTempReading</externalName>
    <fields>
        <fullName>centigrade__c</fullName>
        <description>centigrade</description>
        <externalDeveloperName>centigrade</externalDeveloperName>
        <label>centigrade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>class__c</fullName>
        <description>class</description>
        <externalDeveloperName>class</externalDeveloperName>
        <label>class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>description</description>
        <externalDeveloperName>description</externalDeveloperName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modifiedDate__c</fullName>
        <description>modifiedDate</description>
        <externalDeveloperName>modifiedDate</externalDeveloperName>
        <label>modifiedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selfLink__c</fullName>
        <description>selfLink</description>
        <externalDeveloperName>selfLink</externalDeveloperName>
        <label>selfLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>shipmentFK__c</fullName>
        <label>shipmentFK</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipmentLU__c</fullName>
        <externalDeveloperName>shipmentFK</externalDeveloperName>
        <label>BCShipment</label>
        <length>255</length>
        <referenceTo>BCShipment__x</referenceTo>
        <relationshipLabel>BCTempReading</relationshipLabel>
        <relationshipName>BCTempReading</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>shipment__c</fullName>
        <description>shipment</description>
        <externalDeveloperName>shipment</externalDeveloperName>
        <label>shipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <externalDeveloperName>timestamp</externalDeveloperName>
        <label>Timestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionId__c</fullName>
        <description>transactionId</description>
        <externalDeveloperName>transactionId</externalDeveloperName>
        <label>transactionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BCTempReading</label>
    <listViews>
        <fullName>All</fullName>
        <columns>timestamp__c</columns>
        <columns>ExternalId</columns>
        <columns>shipmentFK__c</columns>
        <columns>centigrade__c</columns>
        <columns>class__c</columns>
        <columns>shipmentLU__c</columns>
        <columns>shipment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>BCTempReading</pluralLabel>
</CustomObject>